--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,9 @@ lifecycleRuntimeKtx = "2.9.3"
 activityCompose = "1.8.0"
 composeBom = "2024.09.00"
 dataStore = "1.1.1"
+room = "2.6.1"           # <-- AÑADIR
+coil = "2.6.0"           # <-- AÑADIR
+ksp = "2.0.21-1.0.21"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
